--- a/client/src/screens/Home/Home.css
+++ b/client/src/screens/Home/Home.css
@@ -53,14 +53,23 @@
   color: #f7f7f7;
   max-width: 65vw;
   text-align: center;
-  margin-bottom: 5vh;
 }
 
 #portfolio-link {
   width: 7vw;
   height: auto;
+  margin-left: 1.5vh;
+  margin-top: 2vh;
+  margin-bottom: -3vh;
 }
 
 #portfolio-link:hover {
   transform: scale(1.1, 1.1);
+}
+
+#link-description {
+  color: #f7f7f7;
+  text-align: center;
+  margin-bottom: 5vh;
+  font-size: 11px;
 }
